--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -89,5 +89,12 @@
   },
   "table": {
     "actions": "Действия"
+  },
+  "deliveryPricing": {
+    "driveType": {
+      "car": "Автомобиль",
+      "bike": "Мотоцикл",
+      "foot": "Пешком"
+    }
   }
 }
