--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -96,5 +96,12 @@
       "bike": "Мотоцикл",
       "foot": "Пешком"
     }
+  },
+  "users": {
+    "status": {
+      "active": "Активный",
+      "inactive": "Неактивный",
+      "blocked": "Заблокированный"
+    }
   }
 }
