--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -103,5 +103,12 @@
       "inactive": "Неактивный",
       "blocked": "Заблокированный"
     }
+  },
+  "organizations": {
+    "paymentType": {
+      "cash": "Наличные",
+      "card": "Карта",
+      "client": "Клиент"
+    }
   }
 }
