--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -94,7 +94,8 @@
     "driveType": {
       "car": "Автомобиль",
       "bike": "Мотоцикл",
-      "foot": "Пешком"
+      "foot": "Пешком",
+      "bycicle": "Велосипед"
     }
   },
   "users": {
