--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -94,6 +94,7 @@
     "driveType": {
       "car": "Автомобиль",
       "bike": "Мотоцикл",
+      "bike2": "Мотоцикл2",
       "foot": "Пешком",
       "bycicle": "Велосипед"
     }
